# Kot

./: .gitattributes  .gitignore  .gitmodules  FS.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  bootstrap.yml  build.sh  llvm.sh  log.txt  makefile  readme.md  test.c
.github/workflows/: c-cpp.yml
.petmpEBD456/: build.bat
.petmpEBD456/src/: kernel.cpp  kernelInit.cpp  kernelInit.h  kernelStart.c  memory.cpp
Bootstrap/: host-tools.yml  kot-apps.yml  kot-base.yml  kot-libs.yml  kot-modules.yml  libs.yml  ports.yml
Kernel/: Makefile  build.bat  kernel.ld  limine.cfg
Kernel/src/: bitmap.cpp  bitmap.h  efiMemory.cpp  graphics.cpp  graphics.h  kernel.cpp  kernelInit.cpp  kernelInit.h  memory.cpp  memory.h
Lib/scr/: types.h
OVMFbin/: OVMF_VARS-pure-efi.fd
RamFSParser/: BuildRamFs.bat  KotRamFS.sln
RamFSParser/KotRamFS/: KotRamFS.cpp  KotRamFS.vcxproj  KotRamFS.vcxproj.filters  RamFs.h
Scr/: LLOSv1.vhd  kot.nvram  kot.vbox  kot.vbox-prev
Scr/C_UEFI/: .gitignore  LICENSE  README.md
Scr/Kernel-Development-64bit-x86-OS-master/: .README.swp  LICENSE  Makefile  Makefile.config  README  vmem.s
Scr/Logs/: VBox.log.1  VBox.log.2  VBox.log.3  VBox.png.1  VBox.png.3
Scr/LowLevelOS-main/: .gitignore  README.md  build.sh  run.sh
Sources/Kernel/: .gitignore  (+4 more)
Sources/Libs/mlibc/Src/sysdeps/kot/: meson.build
Sources/Libs/mlibc/Src/sysdeps/kot/crt-x86_64/: crt0.S
Sources/Libs/mlibc/Src/sysdeps/kot/generic/: atomic.S  cstring.cpp  descriptor.cpp  entry.cpp  filesystem.cpp  generic.cpp  launch.cpp  math.cpp  memory.cpp  process.cpp  shell.cpp  sys.cpp  thread.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/: uisd.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/audio/: audio.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/authorization/: authorization.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/graphics/: graphics.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/hid/: hid.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/pci/: pci.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/storage/: device.cpp  fs.cpp  storage.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/system/: system.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/uisd/srvs/time/: time.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/utils/: utils.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/utils/map/: map.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/generic/utils/vector/: vector.cpp
Sources/Libs/mlibc/Src/sysdeps/kot/include/abi-bits/: auxv.h  mode_t.h  pid_t.h  seek-whence.h
Sources/Libs/mlibc/Src/sysdeps/kot/include/kot/: arch.h  atomic.h  authorization.h  bits.h  cstring.h  descriptor.h  ioctlsrv.h  keyhole.h  launch.h  math.h  memory.h  shell.h  sys.h  syscall.h  thread.h  types.h  uisd.h  utils.h  x86_64.h
Sources/Libs/mlibc/Src/sysdeps/kot/include/kot/syscall/: list.h
Sources/Libs/mlibc/Src/sysdeps/kot/include/kot/uisd/srvs/: audio.h  graphics.h  hid.h  pci.h  storage.h  system.h  time.h
Sources/Libs/mlibc/Src/sysdeps/kot/include/kot/uisd/srvs/storage/: device.h
Sources/Libs/mlibc/Src/sysdeps/kot/include/kot/utils/: map.h  vector.h
Sources/Libs/wip-libc++/Src/: Makefile  README.md  meson.build  meson_options.txt
Sources/Libs/wip-libc++/Src/docs/: CONTRIBUTING.md  libcpp_thread_support.md  libcxxabi_specification.md  software_inventory.xlsx
Sources/Libs/wip-libc++/Src/docs/development/: libraries.md
Sources/Libs/wip-libc++/Src/docs/project-history/2020/2020-05/: 2020-05-11T23:08:44Z_note_6IicfXYKVkbN0rNH.md
Sources/Libs/wip-libc++/Src/embedded-unwind/: README.md
Sources/Libs/wip-libc++/Src/embedded-unwind/include/: unwind.h
Sources/Libs/wip-libc++/Src/embedded-unwind/src/: Unwind-sjlj_threadx.c
Sources/Libs/wip-libc++/Src/extensions/plf_list/: plf_list_test_suite.cpp
Sources/Libs/wip-libc++/Src/extensions/plf_stack/: README.md  plf_stack.h  plf_stack_test_suite.cpp
Sources/Libs/wip-libc++/Src/extensions/ring_span/: ring_span.hpp
Sources/Libs/wip-libc++/Src/include/: meson.build
Sources/Libs/wip-libc++/Src/include/apple/: Availability.h  AvailabilityInternal.h  dlfcn.h
Sources/Libs/wip-libc++/Src/include/c++/: __baremetal_locale_fallbacks.hpp  __config.in  __libcxx_config_site.in  __locale  locale  meson.build
Sources/Libs/wip-libc++/Src/include/c++/external_threading/: __external_threading_framework  __external_threading_freertos  __external_threading_threadx
Sources/Libs/wip-libc++/Src/include/c++/include/: meson.build  refstring.h
Sources/Libs/wip-libc++/Src/include/c++/support/: meson.build
Sources/Libs/wip-libc++/Src/include/c++/support/baremetal/: meson.build  xlocale.h
Sources/Libs/wip-libc++/Src/include/c++/support/newlib/: meson.build
Sources/Libs/wip-libc++/Src/include/c++/support/runtime/: meson.build  stdexcept_default.ipp
Sources/Libs/wip-libc++/Src/include/c++abi/: meson.build
Sources/Libs/wip-libc++/Src/libcxx/test/support/: rapid-cxx-test.h
Sources/Libs/wip-libc++/Src/libcxxabi/src/demangle/: ItaniumDemangle.h
Sources/Libs/wip-libc++/Src/runtime/: placeholders.cpp
Sources/Libs/wip-libc++/Src/src/c++/: chrono.cpp  debug.cpp  framework_thread.cpp  locale.cpp  new_terminate_badalloc.cpp  random.cpp  stdexcept.cpp  string.cpp  thread.cpp
Sources/Libs/wip-libc++/Src/src/c++abi/: abort_message.cpp  abort_message.h  cxa_demangle.cpp  cxa_guard.cpp  cxa_handlers.cpp  cxa_personality.cpp
Sources/Libs/wip-libc++/Src/src/lightabi/: aebi_atexit.cpp  aebi_atexit_noreturn.cpp  cxa_guard.cpp  memory.cpp  virtual.cpp
Sources/Libs/wip-libc++/Src/tools/: CI.jenkinsfile  Jenkinsfile
Specs/: Kot.pptx
Toolchain/: build.sh  crosscompiler.sh
Tools/: .gitignore  BuildCompilers.sh  BuildRamFS.sh  BuildStorage.sh  BuildTools.sh  Buildinitrd.sh  README.md  Storage.json  VirtualDisk.py  audio.py  initrd.py  keyboard.py  keys.json  ramfs.py
UEFI/: bootinfo.h  build.bat  efi.h  errorCodes.h  lib.h  main.c  memory.h  types.h
bootstrap/: cross-file.ini  sys-apps.yml  sys-kernel.yml  sys-libs.yml  sys-modules.yml  sys-tools.yml
event/: event.cpp  event.h
(+2110 files in other folders)
